--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -4,7 +4,7 @@
         <h1>Finstagram</h1>
     </header>
     <main role="main">
-        <% @post.each do |post| %>
+        <% @posts.each do |post| %>
             <article class="post">
                 <div class="user-info">
                     <img src="<%= post.user.avatar_url %>" alt="post from <%= post.user.username %>">
