--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,14 +1,17 @@
-<form> action="/login" method="POST">
+
+
+<form action="/login" method="POST">
     <div class="form-group">
         <label for="username">Username</label>
         <input type="text" id="username" name="username">
     </div>
     
-    <div class="from-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password"
-    </div>
     <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password">
+    </div>
+<%= @error_message if @error_message %>
+     <div class="form-group">
         <button class="button" type="submit">Login</button>
     </div>
 </form>
