--- a/app/views/shared/post.erb
+++ b/app/views/shared/post.erb
@@ -4,13 +4,14 @@
         <h2><%= post.user.username %></h2>
         <h3><%= post.humanized_time_ago %></h3>
     </div>
-    <a class="photo" href="#">
+    <a class="photo" href="/posts/<%= post.id %>">
         <img src="<%= post.photo_url %>" alt="post from <%= post.user.username %>">
     </a>
     <div class="actions">
         <%= post.like_count %> likes
         <span class="comment-count"><%= post.comment_count %> comments</span> 
     </div>
+    <%= erb(:"shared/new_comment", {locals: {post: post}}) %>
     <ul class="comments">
         <% post.comments.each do |comment| %>
             <li>
